# plugin-holdover

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: CMakeLists.txt  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: CeilingLimiter.cpp  CeilingLimiter.h  ChannelStrip.cpp  ChannelStrip.h  Compressor.cpp  Compressor.h  DriveBlock.cpp  DriveBlock.h  EqBlock.cpp  EqBlock.h  FeedMatrix.h  FilterBlock.cpp  FilterBlock.h  InputStage.h  MeterState.h  OutputStage.h  Placeholder.cpp  Scales.h
Source/presets/: FactoryPresets.cpp  FactoryPresets.h  PresetManager.cpp  PresetManager.h
Source/ui/: ControlHelpers.h  HoldoverLookAndFeel.cpp  HoldoverLookAndFeel.h  Layout.h  LedMeter.cpp  LedMeter.h  PresetBar.cpp  PresetBar.h
Source/ui/panels/: CompressorPanel.h  DrivePanel.h  EqPanel.h  FilterPanel.h  InputPanel.h  MatrixPanel.h  Panel.h
docs/superpowers/plans/: 2026-06-02-character-presets.md  2026-06-02-drive-vca-harmonics.md  2026-06-02-holdover.md  2026-06-02-preset-selector.md  2026-06-02-ui-rebuild-console.md
docs/superpowers/specs/: 2026-06-02-analog-character-study.md  2026-06-02-character-presets-design.md  2026-06-02-holdover-design.md  2026-06-02-preset-selector-design.md  2026-06-02-ui-rebuild-design.md
tests/: CMakeLists.txt  TestSignals.h  test_ceiling.cpp  test_channelstrip.cpp  test_compressor.cpp  test_drive.cpp  test_editor_size.cpp  test_eq.cpp  test_filter.cpp  test_hardening.cpp  test_inputstage.cpp  test_main.cpp  test_matrix.cpp  test_output.cpp  test_parameters.cpp  test_presetmanager.cpp  test_presets.cpp  test_processor_presets.cpp  test_scales.cpp
